references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/BindingConnector_redefine.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:5411d09b6c11d3c322629a93c3deeca7255be2e3f11334d511163562be2fa930
size 3723
